--- a/Assure/src/main/resources/properties/assure.properties
+++ b/Assure/src/main/resources/properties/assure.properties
@@ -7,6 +7,6 @@ jdbc.url=jdbc:mysql://localhost:3306/toyassure?allowPublicKeyRetrieval=true&useS
 jdbc.username=root
 jdbc.password=root@123
 hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-hibernate.show_sql=false
+hibernate.show_sql=true
 hibernate.hbm2ddl.auto=update
 
