--- a/Assure/src/main/resources/properties/assure.properties
+++ b/Assure/src/main/resources/properties/assure.properties
@@ -9,4 +9,5 @@ jdbc.password=root@123
 hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.show_sql=true
 hibernate.hbm2ddl.auto=update
+hibernate.physical_naming_strategy=assure.spring.CustomPhysicalNamingStrategy
 
