--- a/assure/pom.xml
+++ b/assure/pom.xml
@@ -259,7 +259,11 @@
             <groupId>toyassure</groupId>
             <artifactId>commons</artifactId>
             <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.api-client</groupId>
+            <artifactId>google-api-client</artifactId>
+            <version>2.0.0</version>
         </dependency>
     </dependencies>
 
