complete half dto and fullservice

--- a/assure/pom.xml
+++ b/assure/pom.xml
@@ -35,7 +35,7 @@
         <!--        <jetty.version>9.4.21.v20190926</jetty.version>-->
         <jetty.version>9.4.30.v20200611</jetty.version>
         <jetty.http.port>9000</jetty.http.port>
-        <jetty.context>/pos</jetty.context>
+        <jetty.context>/assure</jetty.context>
         <failOnMissingWebXml>false</failOnMissingWebXml>
 
         <property name="show_sql">true</property>
